--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -11,6 +11,10 @@
   <body>
   {% include "app/Components/navbar.html" %}
   {% include "app/Components/GUI_window_navbar.html" %}
+
+  <div class="creed">
+    <a>EEEEEEEEEEE</a>
+  </div>
   
     <div class='login'>
       <form action="{% url 'login' %}"method="post">{% csrf_token %}
