--- a/app/templates/app/app.html
+++ b/app/templates/app/app.html
@@ -58,7 +58,7 @@
 
     </div>
     <form action="{% url 'GUI_test' %}"method="get">
-      <input type="submit"value="Get in to GUI page">
+      <input type="submit"value="Get in to Shopping page">
     </form>
   </body>
 </html>
